--- a/Calculadora IMC/index.html
+++ b/Calculadora IMC/index.html
@@ -1,1 +1,24 @@
-//index
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Calculadora IMC</title>
+        <style type="text/css"></style>
+    </head>
+    <body>
+        
+        Altura em metros (ex: 1.70 metros) <br/>
+        <input type="text" name="altura" id="altura" /><br/><br/>
+
+        Peso em quilos <br/>
+        <input type="text" name="peso" id="peso" /><br/><br/>
+
+        <button id="button">Calcular IMC</button><br/><br/>
+
+        <div id="resultado"></div>
+
+        <script type="text/javascript" src="jquery.min.js"></script>
+
+        <script type="text/javascript" src="script.js"></script>
+    </body>
+</html>
