--- a/Calculadora IMC/index.html
+++ b/Calculadora IMC/index.html
@@ -17,7 +17,7 @@
 
         <div id="resultado"></div>
 
-        <script type="text/javascript" src="jquery.min.js"></script>
+        <script type="text/javascript" src="../jquery.min.js"></script>
 
         <script type="text/javascript" src="script.js"></script>
     </body>
