--- a/Drag_e_drop/index.html
+++ b/Drag_e_drop/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Força de senha</title>
+        <title>Drag e drop</title>
         <style type="text/css">
         #objeto {
             width: 150px;
